RESOLVED FIXED 258501
Fix typo in logging in RemoteImageBufferProxy::ensureBackendCreated
https://bugs.webkit.org/show_bug.cgi?id=258501
Summary Fix typo in logging in RemoteImageBufferProxy::ensureBackendCreated
Simon Fraser (smfr)
Reported 2023-06-25 11:35:13 PDT
Fix typo in logging in RemoteImageBufferProxy::ensureBackendCreated logs "creaetion"
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-25 11:35:30 PDT
Simon Fraser (smfr)
Comment 2 2023-06-25 11:36:44 PDT
EWS
Comment 3 2023-06-25 11:38:42 PDT
Committed 265502@main (00c017bb449c): <https://commits.webkit.org/265502@main> Reviewed commits have been landed. Closing PR #15280 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.