Fix typo in logging in RemoteImageBufferProxy::ensureBackendCreated https://bugs.webkit.org/show_bug.cgi?id=258501 rdar://111294754

Unreviewed.

Fix spelling of "creaetion".

* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp:
(WebKit::RemoteImageBufferProxy::ensureBackendCreated const):

Canonical link: https://commits.webkit.org/265502@main